--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
     <head>
         <title>Actividad 3</title>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <script src="script.js"></script>
     </head>
     <body></body>
